--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -196,7 +196,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Zipf's law ( $ r^{b} f = a $ ) is applicable to power law relationships between ranks and outcomes. We discussed power laws and emergence in physical systems with no natural pressure to reduce outcomes. In real world systems like city populations or incomes we see these power law relationships. By applying a log transform to the Zipf's law formula, we have $ \\log f = \\log a + b \\log r $, allowing us to apply a linear curve fit and find coefficients $ b $ and $ a $. Below is a plot for population data.\n"
+    "Zipf's law ( $ r^{b} f = a $ ) is applicable to power law relationships between ranks and outcomes. We discussed power laws and emergence in physical systems with no natural pressure to reduce outcomes. In real world systems like city populations or incomes we see these power law relationships. By applying a log transform to the Zipf's law formula, we have \n",
+    "\n",
+    "$ \\log f = \\log a + b \\log r $\n",
+    "\n",
+    "allowing us to apply a linear curve fit and find coefficients $ b $ and $ a $. Below is a plot for population data.\n"
    ]
   },
   {
