--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -494,13 +494,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 185.,   54.,   19.,   15.,    0.,  149.,  126.,   79.,   73.,   52.]),\n",
+       " array([ 1. ,  1.8,  2.6,  3.4,  4.2,  5. ,  5.8,  6.6,  7.4,  8.2,  9. ]),\n",
+       " <a list of 10 Patch objects>)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAEACAYAAABI5zaHAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD1lJREFUeJzt3X+M5HV9x/Hni1vvFAkXqnJXOD0giKLRoLHUFK1jpKht\nAtY/KGrir9g2oQbTPxoP/7lL05TSxDYmrX8YkVILRaQlYNrgQXHaaMLhDxD0zvOqPTjRm/7g1CAN\nheXdP+YL2dztMnu3u/MdPvd8JJP9zne+M5/Xzu6+5jufme9sqgpJUltO6DuAJGn1We6S1CDLXZIa\nZLlLUoMsd0lqkOUuSQ2aWO5JtiS5K8l3kzyQ5Ipu/SlJdibZm+TLSTYuuM6VSfYl2ZPkorX8BiRJ\nR8qk97kn2Qxsrqr7kpwEfBO4BPgQ8D9V9edJPg6cUlXbkrwKuB74FWALcCfw8vIN9ZI0NRP33Kvq\nYFXd1y0/CuxhXNqXANd1m10HvKtbvhi4saqerKr9wD7g/FXOLUl6Fkc1557kDOA84G5gU1WNYPwA\nAJzabXY6cGDB1R7u1kmSpmTZ5d5NydwMfKzbgz98msVpF0maEXPL2SjJHONi/3xV3dqtHiXZVFWj\nbl7+P7v1DwMvXXD1Ld26w2/TBwNJOgZVlUnbLHfP/XPA7qr61IJ1twEf7JY/ANy6YP1lSdYnORM4\nG7hniYAzd9q+fXvvGcxkpuMxl5mWd1quiXvuSS4A3gc8kORextMvnwCuBm5K8mHgQeDSrrB3J7kJ\n2A08AVxeR5NIkrRiE8u9qr4GrFvi4guXuM5VwFUryCVJWgGPUD3MYDDoO8IRzLQ8Zlq+WcxlptU1\n8SCmNRs4cbZGko5SEmoVX1CVJD2HWO6S1CDLXZIaZLlLUoMsd0lqkOUuSQ2y3CWpQZa7JDXIcpek\nBi3rI3+PF6PRiEceeWTq45522mls3Lhx8oaStEx+/MACJ5/8YuDFwMQje1fN/Pz/8prXvJy7775j\namNKeu5a7scPuOe+wGOP/Zz5+R8D66c46i4OHbpiiuNJOh445y5JDbLcJalBlrskNchyl6QGWe6S\n1CDLXZIaZLlLUoMsd0lqkOUuSQ2y3CWpQZa7JDXIcpekBlnuktQgy12SGmS5S1KDLHdJapDlLkkN\nstwlqUGWuyQ1yHKXpAZZ7pLUIMtdkhpkuUtSgyx3SWqQ5S5JDbLcJalBlrskNchyl6QGWe6S1CDL\nXZIaZLlLUoMsd0lqkOUuSQ2aWO5JrkkySnL/gnXbk/woybe60zsWXHZlkn1J9iS5aK2CS5KWtpw9\n92uBty+y/i+q6vXd6XaAJOcClwLnAu8EPp0kq5ZWkrQsE8u9qr4KHFrkosVK+xLgxqp6sqr2A/uA\n81eUUJJ01FYy5/7RJPcl+WySjd2604EDC7Z5uFsnSZqiuWO83qeBP66qSvInwCeBjxztjezYseOZ\n5cFgwGAwOMY4ktSm4XDIcDg86uulqiZvlGwFvlRVr322y5JsA6qqru4uux3YXlW7FrleLWfsaZqb\nW8/8/KPA+imOuotzzrmCvXuPuIsk6QhJqKqJr2Uud1omLJhjT7J5wWXvBr7TLd8GXJZkfZIzgbOB\ne5Y5htSczZvPIMnUT5s3n9H3t66eTZyWSXIDMABelOQhYDvw1iTnAU8B+4HfB6iq3UluAnYDTwCX\nz9zuuTRFo9GDwPT/BEYj36R2vJtY7lX13kVWX/ss218FXLWSUJKklfEIVUlqkOUuSQ2y3CWpQZa7\nJDXIcpekBlnuktQgy12SGmS5S1KDLHdJapDlLkkNstwlqUGWuyQ1yHKXpAZZ7pLUIMtdkhpkuUtS\ngyx3SWqQ5S5JDbLcJalBlrskNchyl6QGWe6S1KC5vgNIWgsbSDL1UTdt2srBg/unPq6OZLlLTXoc\nqKmPOhpN/wFFi3NaRpIaZLlLUoMsd0lqkOUuSQ2y3CWpQZa7JDXIcpekBlnuktQgy12SGmS5S1KD\nLHdJapDlLkkNstwlqUGWuyQ1yHKXpAZZ7pLUIMtdkhpkuUtSgyx3SWqQ5S5JDbLcJalBlrskNchy\nl6QGTSz3JNckGSW5f8G6U5LsTLI3yZeTbFxw2ZVJ9iXZk+SitQouSVracvbcrwXefti6bcCdVfUK\n4C7gSoAkrwIuBc4F3gl8OklWL64kaTkmlntVfRU4dNjqS4DruuXrgHd1yxcDN1bVk1W1H9gHnL86\nUSVJy3Wsc+6nVtUIoKoOAqd2608HDizY7uFunSRpiuZW6XbqWK60Y8eOZ5YHgwGDwWCV4khSG4bD\nIcPh8Kivl6rJvZxkK/Clqnptd34PMKiqUZLNwFeq6twk24Cqqqu77W4HtlfVrkVus5Yz9jTNza1n\nfv5RYP0UR93FOedcwd69R9xFasD4Jac+fs/7G3fW/q5bk4Sqmvha5nKnZdKdnnYb8MFu+QPArQvW\nX5ZkfZIzgbOBe5Y5hiRplUyclklyAzAAXpTkIWA78GfAF5N8GHiQ8TtkqKrdSW4CdgNPAJfP3O65\nJB0HJpZ7Vb13iYsuXGL7q4CrVhJKkrQyHqEqSQ2y3CWpQZa7JDXIcpekBlnuktQgy12SGmS5S1KD\nLHdJapDlLkkNstwlqUGWuyQ1yHKXpAZZ7pLUIMtdkhpkuUtSgyx3SWqQ5S5JDbLcJalBlrskNWji\n/1CVpOXbQJKpj7pp01YOHtw/9XFnmeUuaRU9DtTURx2Npv+AMuuclpGkBlnuktQgy12SGmS5S1KD\nfEFVUgOm/y6dWX+HjuUuqQHTf5fOrL9Dx2kZSWqQ5S5JDbLcJalBlrskNchyl6QGWe6S1CDLXZIa\nZLlLUoMsd0lqkOUuSQ2y3CWpQZa7JDXIcpekBlnuktQgy12SGmS5S1KDLHdJapDlLkkNstwlqUGW\nuyQ1aEX/IDvJfuBnwFPAE1V1fpJTgC8AW4H9wKVV9bMV5mzaD36we+r/uR1m/7+3Szp2K91zfwoY\nVNXrqur8bt024M6qegVwF3DlCsdo3vz8o4z/c/t0T6PRg1P5/iRN34r23IFw5APEJcBbuuXrgCHj\nwpekhmzo5Rn3cq10z72AO5J8PclHunWbqmoEUFUHgVNXOIYkzaDH6eMZ93KtdM/9gqr6SZKXADuT\n7F1k9CXT7Nix45nlwWDAYDBYYRxJas2wOx2dVC3/keBZbyjZDjwKfITxPPwoyWbgK1V17iLb12qN\nvVrm5tZ389/rpzjqLuCNHM0j8uoJs/YzaM34aXs/P1vHbXHM8bhVNXE+6JinZZKcmOSkbvmFwEXA\nA8BtwAe7zT4A3HqsY0iSjs1KpmU2Abckqe52rq+qnUm+AdyU5MPAg8Clq5BTknQUjrncq+o/gPMW\nWf8IcOFKQkmSVsYjVCWpQZa7JDXIcpekBlnuktQgy12SGmS5S1KDLHdJapDlLkkNstwlqUGWuyQ1\nyHKXpAZZ7pLUIMtdkhpkuUtSgyx3SWqQ5S5JDbLcJalBlrskNchyl6QGWe6S1CDLXZIaZLlLUoMs\nd0lqkOUuSQ2y3CWpQZa7JDXIcpekBlnuktQgy12SGmS5S1KD5voOoD5tIMnUR920aSsHD+6f+rjS\n8cRyP649DtTURx2Npv+AIh1vnJaRpAZZ7pLUIKdl1APn+qW1ZrmrB871S2vNaRlJapDlLkkNstwl\nqUGWuyQ1yHKXpAZZ7pLUIMtdkhpkuUtSgyx3SWqQ5S5JDVqzck/yjiTfS/L9JB9fq3EkSUdak3JP\ncgLwV8DbgVcD70nyyrUYa/X9a98BFjHsO8Aihn0HWMSw7wDPIcO+Ayxi2HeARQz7DnDM1mrP/Xxg\nX1U9WFVPADcCl6zRWKvs3/oOsIhh3wEWMew7wCKGfQd4Dhn2HWARw74DLGLYd4BjtlblfjpwYMH5\nH3XrJElT4Ef+LrBu3fNYt+5Gnv/8+6Y25vz8IX7xi6kNJ+k4karV/1ztJG8EdlTVO7rz24CqqqsX\nbDP9D/SWpAZU1cR/TrBW5b4O2Au8DfgJcA/wnqras+qDSZKOsCbTMlU1n+SjwE7G8/rXWOySND1r\nsucuSepXL0eoztoBTkmuSTJKcn/fWZ6WZEuSu5J8N8kDSa6YgUwbkuxKcm+X60/7zvS0JCck+VaS\n2/rO8rQk+5N8u7u/7uk7D0CSjUm+mGRP9zP81Z7znNPdP9/qvv5sRn7Xr+zun/uTXJ9kfd+ZAJJ8\nrOuDyZ1QVVM9MX5A+XdgK/A84D7gldPOcVimNwHnAff3meOwTJuB87rlkxi/htHr/dRlObH7ug64\nG7ig70xdnj8E/g64re8sCzL9EDil7xyHZfob4EPd8hxwct+ZFmQ7Afgx8NKec2ztfnbru/NfAN4/\nA/fPq4H7gQ3d399O4Kyltu9jz33mDnCqqq8Ch/rMcLiqOlhV93XLjwJ7mIFjBarqsW5xA+M/xt7v\ntyRbgN8EPtt3lsOEGfr8piQnA2+uqmsBqurJqvp5z7EWuhD4QVUdmLjl2vo58H/AC5PMAScyftDp\n27nArqp6vKrmGR9x+e6lNu7jF88DnI5SkjMYP7PY1W+SZ6Y/7gUOAsOq2t13JuAvgT8CZu0FpALu\nSPL1JL/bdxjgTOC/k1zbTYN8JskL+g61wO8Af993iKo6BHwSeAh4GPhpVd3ZbyoAvgO8OckpSU5k\nvEPz0qU2npm9Ci0uyUnAzcDHuj34XlXVU1X1OmAL8OtJ3tJnniS/BYy6ZznpTrPigqp6PeM/wj9I\n8qae88wBrwf+usv1GLCt30hjSZ4HXAx8cQaynMV4mm8rcBpwUpL39psKqup7wNXAHcA/A/cC80tt\n30e5Pwy8bMH5Ld06HaZ7Sngz8PmqurXvPAt1T+f/CXhDz1EuAC5O8kPGe31vTfK3PWcCoKp+0n39\nL+AWxlOSffoRcKCqvtGdv5lx2c+CdwLf7O6rvr0B+FpVPdJNf/wj8Gs9ZwKgqq6tqjdU1QD4KfD9\npbbto9y/DpydZGv3CvRlwCy8w2HW9voAPgfsrqpP9R0EIMmLk2zsll8A/AbjF8R7U1WfqKqXVdVZ\njH+X7qqq9/eZCSDJid2zLpK8ELiI8dPq3lTVCDiQ5Jxu1duAWZhWA3gPMzAl09kLvDHJ85OE8f00\nE8fpJHlJ9/VlwG8DNyy17dQ/W6Zm8ACnJDcAA+BFSR4Ctj/9olOPmS4A3gc80M1xF/CJqrq9x1i/\nDFzX/cKfwPgZxb/0mGeWbQJu6T5mYw64vqp29pwJ4Arg+m4a5IfAh3rOQzd/fCHwe31nAaiqb3fP\n/r7JeNrjXuAz/aZ6xj8k+SXgCeDyZ3tB3IOYJKlBvqAqSQ2y3CWpQZa7JDXIcpekBlnuktQgy12S\nGmS5S1KDLHdJatD/A5+/vvNnzm/mAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10e0fe190>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "plt.hist()"
+    "plt.hist(popFirstDigits)"
    ]
   }
  ],
